# aifororcas-livesystem

./: .gitattributes  .gitignore  CONTRIBUTING.md  Data-archives.md  LICENSE  README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
Analysis/: detection_types.py  dump_api_detections.py  parse_orcasound_reports.py  requirements.txt
DetectionStatistics/: QUERIES.sql  TODOs.txt  summarize_detections.py
HumpbackWhales/: README.md
InferenceSystem/: .dockerignore  .gitignore  DEPENDENCIES.md  Dockerfile  README.md  deploy-aci-githubaction.md  deploy-aci.yaml  fastai_audio_py311.patch  patch_fastai_audio.bat  patch_fastai_audio.sh  requirements-model-v1.txt  requirements.txt
ModelEvaluation/: readme.md  score.py
ModelTraining/: 1_DataCreation.ipynb  3_InferenceTesting.ipynb  README.md  awsAudioTS2Mp3DownloadandConvert.py  false_positives.py  fastai-migration-notes-v1.ipynb  fastai-migration-notes-v2.ipynb  finetune.py  finetuning.py  inference.py  requirements.lock.txt  requirements.txt
ModeratorFrontEnd/: CONTRIBUTING.md  README.md
NotificationSystem/: CONTRIBUTING.md  DbToQueue.cs  ModeratorEmail.cs  NotificationSystem.csproj  NotificationSystem.sln  PostToOrcasite.cs  README.md  SendModeratorEmail.cs  SendSubscriberEmail.cs  SubscriberEmail.cs  local.settings.json  readme.md
Reports/: .gitignore  README_FETCH.md  detection_types.py  fetch_orcahello.py  fetch_orcasound.py  fetch_utils.py  orcasound_graphql.py  pyproject.toml  requirements.txt
backend/: application.py  requirements.txt
data_ml/: DataPreparation.ipynb  DataSanityCheck.ipynb  (+14 more)
(+1159 files in other folders)
